--- a/src/main/resources/templates/smoothies.html
+++ b/src/main/resources/templates/smoothies.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     
     <head>
         <title>smoothies</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
     </head>
     
     <body>
@@ -17,56 +11,66 @@ and open the template in the editor.
         <h4>Smoothiet</h4>
         <ol>
             <li th:each="smoothie : ${smoothies}">
-                <a href="smoothies/${smoothie.id}/">${smoothie.name}</a>
-                <a href="smoothies/${smoothie.id}/delete">(poista)</a>
+                <a th:href="${'/smoothie/' + smoothie.id}" th:utext="${smoothie.name}"></a>
+                <a th:href="${'/smoothie/delete/' + smoothie.id}">(poista)</a>
             </li>
         </ol>
         
         <h4>Raaka-aineet</h4>
         <ol>
-            <li th:each="ingredient : ${ingredients}">
-                ${ingredient.name} <a href="ingredients/${ingredient.id}/delete">(poista)</a></li>
+            <li th:each="ingredient : ${ingredients}" th:inline="text">
+                [[${ingredient.name}]]
+                <a th:href="${'/ingredient/delete/' + ingredient.id}">
+                    (poista)
+                </a>
+            </li>
         </ol>
         
         <h4>Lisää smoothie</h4>
         
-        <form method="POST" action="/smoothies">
+        <form method="POST" action="/smoothie">
             Smoothien nimi:<br/>
-            <input type="text" name="aine"/><br/>
-            <input type="submit" value="Lisää smoothie"/>
+            <input type="text" name="name" /><br/>
+            <input type="submit" value="Lisää smoothie" />
         </form>
         
         <h4>Lisää raaka-aine</h4>
         
-        <form method="POST" action="/ingredients">
+        <form method="POST" action="/ingredient">
             Raaka-aineen nimi:<br/>
-            <input type="text" name="aine"/><br/>
-            <input type="submit" value="Lisää"/>
+            <input type="text" name="name" /><br/>
+            <input type="submit" value="Lisää" />
         </form>
         
         <h4>Lisää uusi rivi smoothiereseptiin</h4>
         
-        <form method="POST" action="/ingredients/add">
+        <form method="POST" action="/ingredient/add">
             Smoothien nimi:<br/>
             <select name="smoothie">
-              <li th:each="smoothie : ${smoothies}">
-                <option name="${smoothie.id}">${smoothie.name}</option>
-              </li>
+                <option
+                    th:each="smoothie : ${smoothies}"
+                    th:value="${smoothie.id}"
+                    th:utext="${smoothie.name}"
+                >
+                </option>
             </select>
             <br/>
             Lisättävä raaka-aine<br/>
-            <select name="raakaAine">
-              <li th:each="ingredient : ${ingredients}">
-                <option name="${ingredient.id}">${ingredient.name}</option>
-              </li>
+            <select name="ingredient">
+                <option
+                    th:each="ingredient : ${ingredients}"
+                    th:value="${ingredient.id}"
+                    th:utext="${ingredient.name}"
+                >
+                </option>
             </select>
             <br/>
             Järjestysnro<br/>
-            <input type="text"/><br/>
+            <input type="text" name="order" /><br/>
             Määrä<br/>
-            <input type="text"/><br/>
+            <input type="text" name="amount" /><br/>
             Ohjeteksti<br/>
-            <input type="text"/><br/>
+            <input type="text" name="info" /><br/>
             <input type="submit" value="Lisää"/>
         </form>
         
