Add styles & refactor

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,10 @@
     <head>
         <title>Recipeindex</title>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" crossorigin="anonymous" />
     </head>
-
     <body>
+        <div th:replace="fragments/header :: header"></div>
         <p>Tähän tulee siistejä smoothieita...</p>
         
         <ul>
