Prepare for heroku & postgre

--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -6,7 +6,7 @@
     <table class="table">
         <thead class="thead-light">
             <th>Ingredient</th>
-            <th>In how many recipe</th>
+            <th>Used in # recipes</th>
         </thead>
 
         <tr th:each="row : ${stats.ingredients}">
