Fix adding recipe rows

--- a/src/main/resources/templates/smoothie.html
+++ b/src/main/resources/templates/smoothie.html
@@ -50,14 +50,14 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">Amount</span>
             </div>
-            <input type="text" class="form-control" name="name" />
+            <input type="text" class="form-control" name="amount" />
         </div>
         
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">Instructions</span>
             </div>
-            <input type="text" class="form-control" name="name" />
+            <input type="text" class="form-control" name="info" />
         </div>
         
         <div class="input-group mb-3">
