--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -48,3 +48,9 @@ h2 {
 .input-group-text {
     min-width: 10rem;
 }
+
+.alert-success {
+    max-width: 35rem;
+    margin: auto;
+    margin-top: 2rem;
+}
